fix(style):Fix preventing tab label from overflowing onto new lines

--- a/packages/component-library/src/components/plmg-tabs/plmg-tabs.scss
+++ b/packages/component-library/src/components/plmg-tabs/plmg-tabs.scss
@@ -25,6 +25,7 @@
   font-style: normal;
   font-weight: tokens.$plmg-font-weight-regular;
   line-height: tokens.$plmg-font-lineheight-loose;
+  white-space: nowrap;
   text-transform: uppercase;
   color: tokens.$plmg-color-text-primary-strong;
   border: 0;
